--- a/pipeline/exp/cicd/deployment.yaml
+++ b/pipeline/exp/cicd/deployment.yaml
@@ -1,76 +1,55 @@
-steps:
+######################################################################################################
+# CI/CD steps for Cloud Build to get a compiled TFX pipeline ready for exectuion.
+# Referenced from:
+# https://github.com/GoogleCloudPlatform/mlops-with-vertex-ai/blob/main/build/pipeline-deployment.yaml
+######################################################################################################
 
-# Clone repo to Cloud Build environment
+steps:
+# Clone the repository.
 - name: 'gcr.io/cloud-builders/git'
-  args: ['clone',
-         '${_REPO_URL}', '.',
+  args: ['clone', '--single-branch', '--branch',
+         '$_BRANCH', '$_REPO_URL',
          '--depth', '1',
          '--verbose']
-  id: 'Clone Repo'
+  id: 'Clone Repository'
 
-# Run unit tests
-- name: 'python:3.6-slim-jessie'
-  entrypoint: 'bash'
-  args: ['components/tests.sh']
-  dir: 'kfp-cloudbuild'
-  id: 'Run Unit Tests'
+- name: 'gcr.io/{}/cb-tfx:latest'
+  entrypoint: python
+  args: ['-m', 'pytest', '.']
+  dir: 'production-level-data-analysis/pipeline/exp'
+  id: 'Unit Test'
+  waitFor: ['Clone Repository']
 
-# Create the image for the my_add component
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build',
-         '-t', 'gcr.io/$_PROJECT_ID/my_add:$_TAG', '.']
-  dir: 'kfp-cloudbuild/components/my_add'
-  id: 'Build my_add Image'
-  waitFor: ['Run Unit Tests']
+- name: 'gcr.io/{}/cb-tfx:latest'
+  entrypoint: 'tfx'
+  args: ['pipeline', 'compile',
+          '--pipeline-path', 'kubeflow_v2_runner.py',
+          '--engine', 'kubeflow',
+        ]
+  dir: 'production-level-data-analysis/pipeline/exp'
+  id: 'Compile Pipeline'
+  waitFor: ['Unit Test']
 
-# Create the image for the my_divide component
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build',
-         '-t', 'gcr.io/$_PROJECT_ID/my_divide:$_TAG', '.']
-  dir: 'kfp-cloudbuild/components/my_divide'
-  id: 'Build my_divide Image'
-  waitFor: ['Run Unit Tests']
+- name: 'gcr.io/gcp-ml-172005/cb-tfx:latest'
+  entrypoint: 'tfx'
+  args: ['pipeline', 'create',
+          '--pipeline-path', 'kubeflow_v2_runner.py',
+          '--engine', 'kubeflow',
+          '--build-image'
+        ]
+  dir: 'production-level-data-analysis/pipeline/exp'
+  id: 'Create Pipeline'
+  waitFor: ['Compile Pipeline']  
 
-# Update component specs images
-- name: 'gcr.io/ml-cicd-template/kfp-util:latest'
-  entrypoint: 'python3'
-  args: ['pipeline/helper.py','update-specs',
-         '--repo_url', 'gcr.io/${_PROJECT_ID}',
-         '--image_tage', '{_TAG}']
-  dir: 'kfp-cloudbuild'
-  id:  'Update Component Spec Images'
-
-# Compile pipeline
-- name: 'gcr.io/ml-cicd-template/kfp-util:latest'
-  entrypoint: 'dsl-compile'
-  args: ['--py', 'pipeline/workflow.py',
-         '--output', 'pipeline/pipeline.tar.gz',
-         '--disable-type-check']
-  dir: 'kfp-cloudbuild'
-  id:  'Compile Pipeline'
-
-# Upload compiled pipeline to GCS
-- name: 'gcr.io/cloud-builders/gsutil'
-  args: ['cp', 'pipeline.tar.gz', 'settings.yaml', 'gs://${_GCS_LOCATION}/${_TAG}/']
-  dir: 'kfp-cloudbuild/pipeline'
-  id:   'Upload Pipeline to GCS'
-
-# Deploy pipeline in KFP
-- name: 'gcr.io/ml-cicd-template/kfp-util:latest'
-  entrypoint: '/bin/sh'
-  args: ['-c', '/builder/kubectl.bash;
-         python3 helper.py deploy-pipeline
-         --package_path=pipeline.tar.gz
-         --version=\"$_TAG\"
-         --experiment=\"$_EXPERIMENT_NAME\"
-         --run']
-  dir: 'kfp-cloudbuild/pipeline'
-  env:
-  - 'CLOUDSDK_COMPUTE_ZONE=${_COMPUTE_ZONE}'
-  - 'CLOUDSDK_CONTAINER_CLUSTER=${_CLUSTER_NAME}'
-  id:  'Deploy & Run Pipeline'
-  waitFor: ['Compile Pipeline']
-
-images:
-- 'gcr.io/${_PROJECT_ID}/my_add:${_TAG}'
-- 'gcr.io/${_PROJECT_ID}/my_divide:${_TAG}'
+# --project=gcp-ml-172005 --region=us-central1
+- name: 'gcr.io/gcp-ml-172005/cb-tfx:latest'
+  entrypoint: 'tfx'
+  args: ['run', 'create',
+          '--engine', 'kubeflow',
+          '--pipeline-name', '$_PIPELINE_NAME',
+          '--project', '$_PROJECT',
+          '--region', '$_REGION'
+        ]
+  dir: 'production-level-data-analysis/pipeline/exp'
+  id: 'Create Pipeline Run'
+  waitFor: ['Create Pipeline']
